@@ -11,6 +11,7 @@ munin (work)
   * Plugin: Renamed generic/folding@home to generic/foldingathome (SF#1074241).
   * Plugin: Modify generic/ping_ so it's compatible with Solaris ping
     (SF#1074545).
+  * Munin-run: Now behaves properly when running invalid plugins (SF#1074242).
 
 munin (1.1.7)
 
